--- a/CEM2/AB_testing_2023_(Student).ipynb
+++ b/CEM2/AB_testing_2023_(Student).ipynb
@@ -30,7 +30,7 @@
         "\n",
         "1.2. The data team created four versions of machine learning model for product recommendations to new users of an app. Which one is the best? True\n",
         "\n",
-        "1.3. Two managers from different factions have Layout A and Layout B for a physical convenience store. Which one should we use? True\n",
+        "1.3. Two managers from different factions have Layout A and Layout B for a physical convenience store. Which one should we use? False\n",
         "\n",
         "1.4. Mr. Rabbito thinks offline stores are the best channel to distribute our products, whereas Ms. Rakko thinks online websites are the way to go. Who is right? False\n",
         "\n",
@@ -70,7 +70,7 @@
         "\n",
         "2.3. Which types of promotion coupons will be more effective? purchases / unique visitors\n",
         "\n",
-        "2.4. Which website layouts will attract more customers to click on sign up button? clicks / page views"
+        "2.4. Which website layouts will attract more customers to click on sign up button? clicks / unique visitors"
       ]
     },
     {
@@ -281,6 +281,32 @@
         "|------------:|-------:|---------:|---------:|\n",
         "|         Red |  59504 |     5901 | 0.099170 |\n",
         "|        Gold |  58944 |     6012 | 0.101995 |"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "html"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "10.1\n",
+        "    H0 = There are no differences in the conversion rate of red and gold package.\n",
+        "    Ha = There are differences in the conversion rate of red and gold package.\n",
+        "    Pooled p = (5901+6012)/(59504+58944) = 0.100576\n",
+        "    Standard Error = sqrt(0.100576(1-0.100576) * (1/59054 + 1/58944)) = 0.001748\n",
+        "    z = (0.101995-0.099170)/0.001748 = 1.616132\n",
+        "    zalpha/2 = 1.81\n",
+        "    \n",
+        "    1.62 < 1.81 so We cannot reject the null hypothesis\n",
+        "    We can choose either package.\n",
+        "\n",
+        "10.2\n",
+        "    Red CI = 0.099170+-(1.81 * 0.001748) = 0.099170+-0.003164\n",
+        "    Gold CI = 0.101995+-(1.81 * 0.001748) = 0.101995+-0.003164"
       ]
     },
     {
