cem2 stats abtesting hw

--- a/CEM2/AB_testing_2023_(Student).ipynb
+++ b/CEM2/AB_testing_2023_(Student).ipynb
@@ -44,7 +44,7 @@
         "\n",
         "1.9. Elastic ninja at your company wants to show 15 products on the first page of search results instead of 20 products. Should you allow them? True\n",
         "\n",
-        "1.10. Marketing person wants to know who respond better to our ads campaigns between iOS users and Android users. How to tell? False\n"
+        "1.10. Marketing person wants to know who respond better to our ads campaigns between iOS users and Android users. How to tell? True\n"
       ]
     },
     {
@@ -232,28 +232,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "html"
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sample size = 4316.275368388193\n",
+            "Number of control package = 3453.0202947105545 = 3454.0\n",
+            "Number of test package = 863.2550736776386 = 864.0\n"
+          ]
         }
-      },
-      "outputs": [],
+      ],
       "source": [
-        "Control - Red Package 80%, Test - Gold Package 20%\n",
-        "1. Significance level = 0.15\n",
-        "    Zalpha = 1.036\n",
-        "2. Power = 0.8\n",
-        "    Zbeta = 0.842\n",
-        "3. MDE = 0.01\n",
-        "4. Var = 0.11 * (1-0.11) = 0.0979\n",
+        "import scipy.stats as stats\n",
+        "import numpy as np\n",
+        "p = 11/100\n",
+        "mde = 1/100\n",
+        "control = 80\n",
+        "test = 20\n",
+        "alpha = 15/100\n",
         "\n",
-        "n = 2*(((Zalpha + Zbeta)* sd)/MDE)^2\n",
-        "    = 2 (((1.036 + 0.842)* sqrt(0.0979))/0.01)^2\n",
-        "    = 6905.639\n",
+        "zalpha = stats.norm.ppf(alpha)\n",
+        "zbeta = stats.norm.ppf(1-control/100)\n",
+        "m = control/test\n",
+        "sd =  np.sqrt(p*(1-p))\n",
+        "n = (m+1)/m * np.pow(((zalpha + zbeta)*sd)/mde,2)\n",
         "\n",
-        "Number of red package = 6905.639*0.8 = 5524.511 = 5525\n",
-        "Number of gold package = 6905.639*0.8 = 1381.128 = 1382"
+        "print(\"Sample size =\",n)\n",
+        "print(\"Number of control package =\",n*0.8,\"=\",np.ceil(n*0.8))\n",
+        "print(\"Number of test package =\",n*0.2,\"=\",np.ceil(n*0.2))"
       ]
     },
     {
@@ -285,28 +294,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "html"
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "We can reject the null hypothesis.\n",
+            "Gold package should be used.\n"
+          ]
         }
-      },
-      "outputs": [],
+      ],
       "source": [
-        "10.1\n",
-        "    H0 = There are no differences in the conversion rate of red and gold package.\n",
-        "    Ha = There are differences in the conversion rate of red and gold package.\n",
-        "    Pooled p = (5901+6012)/(59504+58944) = 0.100576\n",
-        "    Standard Error = sqrt(0.100576(1-0.100576) * (1/59054 + 1/58944)) = 0.001748\n",
-        "    z = (0.101995-0.099170)/0.001748 = 1.616132\n",
-        "    zalpha/2 = 1.81\n",
-        "    \n",
-        "    1.62 < 1.81 so We cannot reject the null hypothesis\n",
-        "    We can choose either package.\n",
+        "import scipy.stats as stats\n",
+        "import numpy as np\n",
         "\n",
-        "10.2\n",
-        "    Red CI = 0.099170+-(1.81 * 0.001748) = 0.099170+-0.003164\n",
-        "    Gold CI = 0.101995+-(1.81 * 0.001748) = 0.101995+-0.003164"
+        "nred = 59504\n",
+        "ngold = 58944\n",
+        "convred = 5901\n",
+        "convgold = 6012\n",
+        "pred = 0.099170\n",
+        "pgold = 0.101995\n",
+        "\n",
+        "#10.1\n",
+        "#H0 The conversion rate of red is more than gold\n",
+        "#Ha The conversion rate of red is less than or equal to gold\n",
+        "alpha = 7/100\n",
+        "varred = pred*(1-pred)\n",
+        "vargold = pgold*(1-pgold)\n",
+        "ppool = (convred + convgold) / (nred+ngold)\n",
+        "varpool = ((nred-1)*varred + (ngold-1)*vargold)\n",
+        "sd = np.sqrt(varpool)\n",
+        "zalpha = stats.norm.ppf(1-alpha)\n",
+        "zdiff = (pgold-pred)/sd\n",
+        "\n",
+        "if(zalpha > zdiff):\n",
+        "    print(\"We can reject the null hypothesis.\")\n",
+        "    print(\"Gold package should be used.\")\n",
+        "else:\n",
+        "    print(\"We cannot reject the null hypothesis.\")\n",
+        "    print(\"Red package should be used.\")"
       ]
     },
     {
