--- a/DataSci/ml_2/student.ipynb
+++ b/DataSci/ml_2/student.ipynb
@@ -184,6 +184,112 @@
     "print(hw.Q5())\n",
     "print(hw.Q6())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import f1_score\n",
+    "import numpy as np\n",
+    "import warnings\n",
+    "from sklearn.exceptions import ConvergenceWarning\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=ConvergenceWarning)\n",
+    "\n",
+    "class BankLogistic:\n",
+    "    def __init__(self, data_path): # DO NOT modify this line\n",
+    "        self.data_path = data_path\n",
+    "        self.df = pd.read_csv(data_path, sep=',')\n",
+    "\n",
+    "    def Q1(self): # DO NOT modify this line\n",
+    "        \"\"\"\n",
+    "        Problem 1:\n",
+    "        Load ‘bank-st.csv’ data from the “Attachment”\n",
+    "        How many rows of data are there in total?\n",
+    "        \"\"\"\n",
+    "        # TODO: Paste your code here\n",
+    "        return \n",
+    "\n",
+    "    def Q2(self): # DO NOT modify this line\n",
+    "        \"\"\"\n",
+    "        Problem 2:\n",
+    "        How many numeric variables are there?\n",
+    "        \"\"\"\n",
+    "        # TODO: Paste your code here\n",
+    "        return \n",
+    "\n",
+    "    def Q3(self): # DO NOT modify this line\n",
+    "        \"\"\"\n",
+    "        Problem 3:\n",
+    "        How many categorical variables are there?\n",
+    "        \"\"\"\n",
+    "        # TODO: Paste your code here\n",
+    "        return \n",
+    "\n",
+    "    def Q4(self): # DO NOT modify this line\n",
+    "        \"\"\"\n",
+    "        Problem 4:\n",
+    "        What is the distribution of the target variable for the 'NO' class?\n",
+    "        \"\"\"\n",
+    "        # TODO: Paste your code here\n",
+    "        return \n",
+    "\n",
+    "    def Q5(self): # DO NOT modify this line\n",
+    "        \"\"\"\n",
+    "        Problem 5:\n",
+    "        Drop duplication of the data\n",
+    "        What are the shapes of the data?\n",
+    "        \"\"\"\n",
+    "        # TODO: Paste your code here\n",
+    "        return \n",
+    "\n",
+    "    def Q6(self):\n",
+    "        \"\"\"\n",
+    "        Problem 6:\n",
+    "        How many null values are there in the job and education columns?\n",
+    "        For numeric variables, fill missing values with the mean, and for\n",
+    "        categorical variables, fill missing values with the mode.\n",
+    "        Hint: replace unknown with null\n",
+    "        \"\"\"\n",
+    "        # TODO: Paste your code here\n",
+    "        return \n",
+    "\n",
+    "    def Q7(self):\n",
+    "        \"\"\"\n",
+    "        Problem 7:\n",
+    "        Split train/test for 70%:30% with random_state=0 & stratify option\n",
+    "        What are the shapes of X_train and X_test?\n",
+    "        Hint: Don't forget to encode categorical data using pd.get_dummies before\n",
+    "        splitting the data.\n",
+    "        \"\"\"\n",
+    "        # TODO: Paste your code here\n",
+    "        return\n",
+    "\n",
+    "    def Q8(self):\n",
+    "        \"\"\"\n",
+    "        Problem 8:\n",
+    "        How much data does the test set contain for the class 'No'?\n",
+    "        \"\"\"\n",
+    "         # TODO: Paste your code here\n",
+    "        return \n",
+    "\n",
+    "    def Q9(self):\n",
+    "        \"\"\"\n",
+    "        Problem 9:\n",
+    "        Set the model to be used as Logistic Regression only with random_state=0\n",
+    "        and max_iter=5000\n",
+    "        Build a model that uses all variables.\n",
+    "        What is the macro F1 score for Model on the test data? (Answer with two\n",
+    "        decimal places).\n",
+    "        \"\"\"\n",
+    "        # TODO: Paste your code here\n",
+    "        return #round(macro_f1, 2)"
+   ]
   }
  ],
  "metadata": {
