--- a/AIML/UnsupervisedLearning/Clustering.ipynb
+++ b/AIML/UnsupervisedLearning/Clustering.ipynb
@@ -1268,6 +1268,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_k = range(2, 50)[errors.index(min(errors, key=lambda x: abs(x - (sum(errors) / len(errors)))))]\n",
+    "print(f\"The best value for k is: {best_k}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 139,
    "metadata": {},
    "outputs": [
